--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -29,3 +31,31 @@ jobs:
 
       - name: Lint code
         run: ruff check --output-format=github .
+  
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .
+          pip install -e .[test]
+      
+      - name: Run tests
+        run: |
+          pytest --tb=short -p no:warnings --disable-warnings -q
+          pytest --tb=short -p no:warnings --disable-warnings -q --cov=src --cov-report=xml --cov-report=html
+          coverage report -m
+          coverage html
+          coverage xml
