--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,4 @@ jobs:
       
       - name: Run tests
         run: |
-          pytest --tb=short -p no:warnings --disable-warnings -q
-          pytest --tb=short -p no:warnings --disable-warnings -q --cov=src --cov-report=xml --cov-report=html
-          coverage report -m
-          coverage html
-          coverage xml
+          pytest -v
